# T766-mgmt

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Makefile  Packager.toml  README.md  flake.nix  installer.nsi  rpi_build.sh  settings.toml
T766-CheckinApp/: Cargo.toml
T766-CheckinApp/src/: main.rs
T766-CheckinApp/ui/: app-window.slint
T766-ControlClient/: Cargo.toml  settings.toml
T766-ControlClient/src/: client.rs  config.rs  host.rs  main.rs  puppet.rs
T766-ControlClient/wix/: License.rtf  main.wxs
T766-ControlServer/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile
T766-ControlServer/src/: checkins.rs  db.rs  main.rs  manifests.rs  server.rs  sync.rs
checkin/: Cargo.toml
checkin/src/: main.rs
checkin/ui/: app-window.slint
