[package]
name = "T766-ControlServer"
version = "0.1.0"
authors = ["mark"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
once_cell = "1.21.3"
serde = "1.0.228"
serde_json = "1.0.149"
sled = "0.34.7"
tar = "0.4.44"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

