[package]
name = "T766-ControlServer"
version = "0.1.0"
authors = ["mark"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.43"
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
once_cell = "1.21.3"
redb = "3.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
tar = "0.4.44"
tokio = "1.49.0"
urlencoding = "2.1.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

