[package]
name = "checkin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = "0.5.3"
slint = { version = "1.14.1", features = ["renderer-femtovg"] }

[build-dependencies]
slint-build = "1.14.1"
